# syscall_extract

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/syscall_extract/: __main__.py  cli.py  dataclass_serialization.py  extract_syscalls.py  function_extractor.py  header_utils.py  libclang_utils.py  logging_utils.py  model.py  output_formatter.py  syscall_extractor.py  type_utils.py
tests/: test_model.py
