[project]
name = "syscall-extract"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcin Smoczyński",email = "smoczynski.marcin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clang (>=20.1.0,<21.0.0)",
    "setuptools (>=75.8.2,<76.0.0)"
]

[tool.poetry]
packages = [{include = "syscall_extract", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
